--- a/projeto/bio.html
+++ b/projeto/bio.html
@@ -4,7 +4,8 @@
     <title>Biografia João da Silva</title>
     <meta charset="utf-8">
     <link rel="icon" href="favicon.png">
-    <link rel="stylesheet" href="bio.css">
+    <link rel="stylesheet" href="site.css">
+
   </head>
   <body>
     <h1>Sobre mim</h1>
