--- a/projeto/bio.html
+++ b/projeto/bio.html
@@ -5,6 +5,14 @@
     <meta charset="utf-8">
     <link rel="icon" href="favicon.png">
     <link rel="stylesheet" href="site.css">
+    <!-- carrega a fonte Crimson Text nas versões normal, itálico e negrito -->
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600">
+
+    <!-- carrega a fonte Open Sans Condensed na versão negrito, -->
+    <!-- que é a única necessária para os cabeçalhos            -->
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700">
+
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 
   </head>
   <body>
