--- a/projeto/bio.html
+++ b/projeto/bio.html
@@ -1,38 +1,58 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Biografia João da Silva</title>
-    <meta charset="utf-8">
-    <link rel="icon" href="favicon.png">
-    <link rel="stylesheet" href="site.css">
-    <!-- carrega a fonte Crimson Text nas versões normal, itálico e negrito -->
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600">
 
-    <!-- carrega a fonte Open Sans Condensed na versão negrito, -->
-    <!-- que é a única necessária para os cabeçalhos            -->
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700">
+<head>
+  <title>Biografia João da Silva</title>
+  <meta charset="utf-8">
+  <link rel="icon" href="favicon.png">
+  <link rel="stylesheet" href="site.css">
+</head>
 
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
-
-  </head>
-  <body>
+<body>
+  <main>
     <h1>Sobre mim</h1>
-      <p>Moro em São Paulo mas atendo clientes do mundo todo. Sou conhecido por fazer produtos de <em>qualidade</em>, durabilidade e que agregam valor para meus clientes.</p>
-      <p>Trabalho usando a web como plataforma, ou seja, respiro HTML5, CSS3 e JavaScript (ou melhor: ECMASCript). Crio sites para todos, seguindo as principais diretivas de acessibilidade, responsividade e web semântica, sem descuidar da qualidade de código.<p>
+    <p>Moro em São Paulo mas atendo clientes do mundo todo. Sou conhecido por fazer produtos de <em>qualidade</em>, durabilidade e que agregam valor para meus clientes.</p>
+    <p>Trabalho usando a web como plataforma, ou seja, respiro HTML5, CSS3 e JavaScript (ou melhor: ECMASCript). Crio sites para todos, seguindo as principais diretivas de acessibilidade, responsividade e web semântica, sem descuidar da qualidade de código.</p>
 
-      <h2>Como trabalho</h2>
+    <h2>Como trabalho</h2>
 
-      <p>Satisfazer meus clientes é prioridade. Para isso, garanto um processo de desenvolvimento altamente interativo, baseado em feedback contínuo. <strong>Não trabalho com escopo fechado</strong>: o cliente é que decide quando o produto está pronto.</p>
+    <blockquote>
+      <p>João é o melhor desenvolvedor front-end com quem já trabalhei. Muito eficiente e muito capaz. Recomendo sem dúvidas!</p>
+      <cite>-- José Souza, Fiat</cite>
+    </blockquote>
 
-      <p>Também não trabalho com prazos fechados: qualidade é importante demais para ser sacrificada.</p>
+    <p>Satisfazer meus clientes é prioridade. Para isso, garanto um processo de desenvolvimento altamente interativo, baseado em feedback contínuo. <strong>Não trabalho com escopo fechado</strong>: o cliente é que decide quando o produto está pronto.</p>
 
-      <h2>Experiência</h2>
+    <p>Também não trabalho com prazos fechados: qualidade é importante demais para ser sacrificada.</p>
 
-      <p>Já desenvolvi projetos para grandes empresas como BMW, UOL e IBM. Neles, o foco principal era entregar uma experiência imersiva e impactante para o usuário final sem descuidar do desempenho e da acessibilidade da página.</p>
-      <p>Também já fui contratado para transformar grandes portais, como Terra e G1, em páginas responsivas. Fui responsável por renovar o layout, reorganizar o conteúdo e re-escrever o código de forma mais reaproveitável.</p>
+    <h2>Experiência</h2>
 
-      <h2>Comunidade</h2>
+    <blockquote>
+      <p>João domina as tecnologias como ninguém. Eu apresentava um problema, ele tinha na ponta da língua a solução mais adequada com as tecnologias mais recentes.</p>
+      <cite>-- Manoel Santos, Petrobrás</cite>
+    </blockquote>
 
-      <p>Procuro repassar meu conhecimento para a comunidade. Para isso, já dei diversas palestras e mantenho um blog.</p>
-  </body>
+    <p>Já desenvolvi projetos para grandes empresas como <a href="http://www.bmw.com.br">BMW</a>, <a href="http://www.uol.com.br">UOL</a> e IBM. Neles, o foco principal era entregar uma experiência imersiva e impactante para o usuário final sem descuidar
+      do desempenho e da acessibilidade da página.</p>
+    <p>Também já fui contratado para transformar grandes portais, como Terra e G1, em páginas responsivas. Fui responsável por renovar o layout, reorganizar o conteúdo e re-escrever o código de forma mais reaproveitável.</p>
+
+    <h2>Comunidade</h2>
+
+    <p>Procuro repassar meu conhecimento para a comunidade. Para isso, já dei diversas palestras e mantenho um <a href="blog.html">blog</a>.</p>
+
+  </main>
+
+  <img src="eu.jpg" alt="Foto de João da Silva">
+  <nav>
+    <h1>João da Silva</h1>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Porfolio</a></li>
+    </ul>
+  </nav>
+  <footer>
+    &copy; João da Silva 2014
+  </footer>
+</body>
+
 </html>
