--- a/projeto/bio.html
+++ b/projeto/bio.html
@@ -6,6 +6,8 @@
   <meta charset="utf-8">
   <link rel="icon" href="favicon.png">
   <link rel="stylesheet" href="site.css">
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600">
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700">
 </head>
 
 <body>
@@ -32,9 +34,10 @@
       <cite>-- Manoel Santos, Petrobrás</cite>
     </blockquote>
 
-    <p>Já desenvolvi projetos para grandes empresas como <a href="http://www.bmw.com.br">BMW</a>, <a href="http://www.uol.com.br">UOL</a> e IBM. Neles, o foco principal era entregar uma experiência imersiva e impactante para o usuário final sem descuidar
-      do desempenho e da acessibilidade da página.</p>
-    <p>Também já fui contratado para transformar grandes portais, como Terra e G1, em páginas responsivas. Fui responsável por renovar o layout, reorganizar o conteúdo e re-escrever o código de forma mais reaproveitável.</p>
+    <p>Já desenvolvi projetos para grandes empresas como <a href="http://www.bmw.com.br">BMW</a>, <a href="http://www.uol.com.br">UOL</a> e <a href="http://www.ibm.com.br">IBM</a>. Neles, o foco principal era entregar uma experiência imersiva e impactante
+      para o usuário final sem descuidar do desempenho e da acessibilidade da página.</p>
+    <p>Também já fui contratado para transformar grandes portais, como <a href="http://www.terra.com.br">Terra</a> e <a href="http://www.g1.globo.com">G1</a>, em páginas responsivas. Fui responsável por renovar o layout, reorganizar o conteúdo e re-escrever
+      o código de forma mais reaproveitável.</p>
 
     <h2>Comunidade</h2>
 
@@ -45,11 +48,14 @@
   <img src="eu.jpg" alt="Foto de João da Silva">
   <nav>
     <h1>João da Silva</h1>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Porfolio</a></li>
-    </ul>
-  </nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="portfolio.html">Porfolio</a></li>
+        <li><a href="bio.html">Sobre Mim</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="contato.html">Contato</a></li>
+      </ul>
+    </nav>
   <footer>
     &copy; João da Silva 2014
   </footer>
