--- a/projeto/bio.html
+++ b/projeto/bio.html
@@ -46,8 +46,9 @@
   </main>
 
   <img src="eu.jpg" alt="Foto de João da Silva">
-  <nav>
+  <aside>
     <h1>João da Silva</h1>
+    <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="portfolio.html">Porfolio</a></li>
@@ -56,6 +57,7 @@
         <li><a href="contato.html">Contato</a></li>
       </ul>
     </nav>
+  </aside>
   <footer>
     &copy; João da Silva 2014
   </footer>
