--- a/projeto/bio.html
+++ b/projeto/bio.html
@@ -61,7 +61,7 @@
         <li><a href="contato.html">Contato</a></li>
       </ul>
     </nav>
-    <ul>
+    <ul class="icones-sociais">
       <li><a href="http://github.com/joaodasilva"><img src="github.png" alt="github"></a></li>
       <li><a href="http://twitter.com/joaodasilva"><img src="twitter.png" alt="twitter"></a></li>
       <li><a href="http://linkedin.com/joaodasilva"><img src="linkedin.png" alt="linkedin"></a></li>
