--- a/projeto/bio.html
+++ b/projeto/bio.html
@@ -50,7 +50,7 @@
     </div>
   </main>
   <img src="eu.jpg" alt="Foto de João da Silva">
-  <aside>
+  <aside class="navegacao-site">
     <h1>João da Silva</h1>
     <nav>
       <ul>
