Aula 10 - Posicionamento mais a fundo - Ajustando nosso layout

--- a/projeto/bio.html
+++ b/projeto/bio.html
@@ -48,7 +48,7 @@
 		<img src="eu.jpg" alt="Foto de João da Silva" class="minha-foto">
 		<aside class="navegacao-site">
 			<h1>João da Silva</h1>
-			<nav class="barra-navegacao">
+			<nav>
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="portfolio.html">Portfolio</a></li>
