--- a/projeto/bio.html
+++ b/projeto/bio.html
@@ -45,7 +45,7 @@
 				<p>Procuro repassar meu conhecimento para a comunidade. Para isso, já dei <a href="portfolio.html">diversas palestras</a> e mantenho um <a href="blog.html">blog</a>.</p>
 			</div>
 		</main>
-		<img src="eu.jpg" alt="Foto de João da Silva" class="minha-foto">
+		<img src="img/eu.jpg" alt="Foto de João da Silva" class="minha-foto">
 		<aside class="navegacao-site">
 			<h1>João da Silva</h1>
 			<nav>
